More updates for v3

--- a/thoughts.html
+++ b/thoughts.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en-us" class="inner">
+<html lang="en-us" class="inner thoughts">
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=Edge;chrome=1">
@@ -30,15 +30,27 @@
 			</nav>
 		</header>
 		<div role="main">
-			<figure>
-				<h1><span>Dailytidb.it</span></h1>
-				<img src="images/dailytidbit.jpeg" alt="" />
-			</figure>
-			<div class="details">
-				<h2 data-icon="⚒">design + CSS3 / jQuery + email template build + hand-picked curation</h2>
-				<p>The best, or sexiset, way to learn a new word each day. Learn a new word each day. curated &amp; hand-picked goodness emailed to your inbox daily.</p>
-			</div>
-			<a href="" class="button" data-icon="✈">View project</a>
+			<header>
+				<h1>Recent Thoughts</h1>
+			</header>
+			<ul class="sub">
+				<li><a href="" data-icon="⚡">Simple, Fancy List Item Styling</a></li>
+				<li><a href="" data-icon="⚡">Simple, Fancy List Item Styling</a></li>
+				<li><a href="" data-icon="⚡">Simple, Fancy List Item Styling</a></li>
+				<li><a href="" data-icon="⚡">Simple, Fancy List Item Styling</a></li>
+				<li><a href="" data-icon="⚡">Simple, Fancy List Item Styling</a></li>
+				<li><a href="" data-icon="⚡">Simple, Fancy List Item Styling</a></li>
+				<li><a href="" data-icon="⚡">Simple, Fancy List Item Styling</a></li>
+				<li><a href="" data-icon="⚡">Simple, Fancy List Item Styling</a></li>
+				<li><a href="" data-icon="⚡">Simple, Fancy List Item Styling</a></li>
+				<li><a href="" data-icon="⚡">Simple, Fancy List Item Styling</a></li>
+				<li><a href="" data-icon="⚡">Simple, Fancy List Item Styling</a></li>
+				<li><a href="" data-icon="⚡">Simple, Fancy List Item Styling</a></li>
+				<li><a href="" data-icon="⚡">Simple, Fancy List Item Styling</a></li>
+				<li><a href="" data-icon="⚡">Simple, Fancy List Item Styling</a></li>
+				<li><a href="" data-icon="⚡">Simple, Fancy List Item Styling</a></li>
+				<li><a href="" data-icon="⚡">Simple, Fancy List Item Styling</a></li>
+			</ul>	
 		</div>
 		<footer id="menu">
 			<h3 data-icon="☰">Navigation</h3>
