--- a/thoughts/index.html
+++ b/thoughts/index.html
@@ -6,7 +6,13 @@ title: Thoughts
   <h1>Recent Thoughts</h1>
 </header>
 <ul class="sub">
-  {% for post in site.categories.thought %}
-  <li><a href="{{ post.url }}" data-icon="⚡">{{ post.title }}</a></li>
-  {% endfor %}
+	{% for post in site.categories.thought %}
+	<li>
+		{% if post.external_link %}
+		<a href="{{ post.external_link }}" class="alt" data-icon="⚡">{{ post.title }}</a>
+		{% else %}
+		<a href="{{ post.url }}" data-icon="⚡">{{ post.title }}</a>
+		{% endif %}
+	</li>
+	{% endfor %}
 </ul>
