Updates for gamma version

--- a/_posts/2011-10-18-whats-cta-to-you.html
+++ b/_posts/2011-10-18-whats-cta-to-you.html
@@ -4,7 +4,7 @@ title: What's CTA To You
 categories: [thought]
 ---
 
-<p><img src="http://jhische.com/dailydropcap/A-10-cap.png" title="Daily Drop Cap by Jessica Hische" alt="A" id="drop-cap" /><del>A</del> Call-to-Action (CTA); a marketers silver bullet. You know what I&rsquo;m referring to: that big, shiny red button that screams &ldquo;Do Whatever I Say, because you know subconsciously you really want to, yet don&rsquo;t know it quite yet.&rdquo; Yeah, that one.</p>
+<p>A Call-to-Action (CTA); a marketers silver bullet. You know what I&rsquo;m referring to: that big, shiny red button that screams &ldquo;Do Whatever I Say, because you know subconsciously you really want to, yet don&rsquo;t know it quite yet.&rdquo; Yeah, that one.</p>
 <p>In case you&rsquo;re a tad befuddled as to what I&rsquo;m referring to; here are some examples in the wild of the interwebs:</p>
 <img src="/images/calls-to-action.png" class="move-over less" alt="Some nice CTA examples -- Mailchimp, Squarspace, and Zerply" />
 <figcaption>Some nice CTA examples from Mailchimp, Squarespace, and Zerply</figcaption>
