--- a/_posts/2012-5-14-faux-button-frustration.html
+++ b/_posts/2012-5-14-faux-button-frustration.html
@@ -4,7 +4,7 @@ title: Faux-button Frustration
 categories: [thought]
 ---
 
-<p><strong><img src="http://jhische.com/dailydropcap/I-6-cap.png" title="Daily Drop Cap by Jessica Hische" alt="I" id="drop-cap" /><del>I</del>&rsquo;ve recently paid more attention to things that I try to imitate on the web, but use in every day life.</strong> The thing that I find the most irksome and concerning is the lack of visual and/or physical interaction with a lot of buttons. The web, especially of late, has done a great job to emphasize the importance of this for user experience, conversion rate, and just general sense of accomplishment. But the real world, unfortunately, didn&rsquo;t think that far ahead, or at least it didn&rsquo;t always think with their users in mind.</p>
+<p><strong>I&rsquo;ve recently paid more attention to things that I try to imitate on the web, but use in every day life.</strong> The thing that I find the most irksome and concerning is the lack of visual and/or physical interaction with a lot of buttons. The web, especially of late, has done a great job to emphasize the importance of this for user experience, conversion rate, and just general sense of accomplishment. But the real world, unfortunately, didn&rsquo;t think that far ahead, or at least it didn&rsquo;t always think with their users in mind.</p>
 <img src="/images/treadmill-buttons.jpeg" style="max-width: 100%; "/>
 <figcaption><em>Image from http://static.happyplace.com/assets/images/2011/11/4eca796a01161.jpg</em></figcaption>
 <h2>Push, Push, Push, What The, Oh Wait, It Is Working</h2>
