--- a/about/index.html
+++ b/about/index.html
@@ -8,7 +8,7 @@ title: About
 <div class="details c">
 	<img src="http://distillery.s3.amazonaws.com/media/2011/04/09/6c114b02092345d699d71a9ad344e99f_7.jpg" alt="That's me" class="middle" />
 	<h2>User of the web:</h2>
-	<p>HTML/CSS, WordPress, JavaScript, Photoshop, <a href="http://twitter.com/jefffis/" target="_blank">Twitter</a>, <a href="http://www.last.fm/user/indiepreneur" target="_blank">Last.fm</a>, <a href="http://open.spotify.com/user/jefffis" target="_blank">Spotify</a>, <a href="http://instagram.heroku.com/users/jefffff" target="_blank">instagr.am</a>, and <a href="http://www.quora.com/Jeff-Doan" target="_blank">Quora</a>.</p>
+	<p>HTML/CSS, WordPress, JavaScript, Photoshop, <a href="http://twitter.com/jefffis/" target="_blank">Twitter</a>, <a href="http://zerply.com/jefffis" target="_blank">Zerply</a>, <a href="http://open.spotify.com/user/jefffis" target="_blank">Spotify</a>, <a href="http://instagram.com/jefffff" target="_blank">Instagram</a>, and <a href="http://www.quora.com/Jeff-Doan" target="_blank">Quora</a>.</p>
 	<h2>Lover of many things:</h2>
 	<p><a href="http://kizaan.com/" target="_blank">my <em>lovely</em> wife</a>, indie music, <a href="http://instagram.heroku.com/users/jefffff#p42025279" target="_blank">our <em>awesome</em> dog</a>, beer, coffee, hockey, art.</p>
 	<h2>Hater of few things:</h2>
