--- a/thoughts/index.html
+++ b/thoughts/index.html
@@ -9,7 +9,7 @@ title: Thoughts
 	{% for post in site.categories.thought %}
 	<li>
 		{% if post.external_link %}
-		<a href="{{ post.external_link }}" class="alt" data-icon="⚡">{{ post.title }}</a>
+		<a href="{{ post.external_link }}" class="alt" data-icon="⇗">{{ post.title }}</a>
 		{% else %}
 		<a href="{{ post.url }}" data-icon="⚡">{{ post.title }}</a>
 		{% endif %}
