Updates for more changes / content adds

--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
 ---
 layout: default
 ---
-<figure>
+<figure class="featured">
 	<a href="/work/dailytidbit/">
-		<h1><span>Dailytidbit</span></h1>
-		<img src="/images/dailytidbit.jpeg" />
+		<!--<h1><span>Dailytidbit</span></h1>
+		<img src="/images/dailytidbit.jpeg" />-->
 	</a>
 </figure>
 <div class="sub">
-	<ul class="sub pad">
-		{% for post in site.categories.work limit:1 %}
+	<ul class="sub minus">
+		<!--{% for post in site.categories.work limit:1 %}
 		<li><a href="{{ post.url }}" data-icon="⚡">{{ post.title }}</a></li>
-		{% endfor %}
+		{% endfor %}-->
+		<li><a href="/work/dailytidbit/" data-icon="⚒">Dailytidbit</a></li>
 	</ul>
 	<h2>Recent Thoughts</h2>
 	<ul class="sub">
