--- a/_posts/2012-05-30-google-web-intents.html
+++ b/_posts/2012-05-30-google-web-intents.html
@@ -5,25 +5,21 @@ categories: [work]
 ---
 
 <figure>
-	<h1><span>Mememator</span></h1>
 	<img src="http://jefff.co/images/large/mememator.jpg" />
 </figure>
 <figure>
-	<h1><span>Quicksnapr</span></h1>
 	<img src="http://jefff.co/images/large/quicksnapr.jpg" />
 </figure>
 <figure>
-	<h1><span>Insprirationmator</span></h1>
 	<img src="http://jefff.co/images/large/inspirationmator.png" />
 </figure>
 <figure>
-	<h1><span>Imagemator</span></h1>
 	<img src="http://jefff.co/images/large/imagemator.jpg" />
 </figure>
 <div class="details">
 <h2 data-icon="⚒">wireframing + design + CSS3 / jQuery</h2>
 
-<strong>Note: these were only built as demos</strong> — we worked with a Google Dev to show these off during the 2012 Google i/o conference. They only were made to work in Chrome Canary or Chrome Developer, so they may crash your browser when trying to use the Web Intents. Click an image to view the web app.
+<p><strong>Note: these were only built as demos</strong> — we worked with a Google Dev to show these off during the 2012 Google i/o conference. They only were made to work in Chrome Canary or Chrome Developer, so they may crash your browser when trying to use the Web Intents. Click an image to view the web app.</p>
 
-<a href="" class="button" data-icon="✈">View project</a>
+<a href="http://quicksnapr.com" class="button" data-icon="✈">View project</a>
 </div>
