--- a/thoughts/index.html
+++ b/thoughts/index.html
@@ -5,7 +5,7 @@ title: Thoughts
 <header>
   <h1>Recent Thoughts</h1>
 </header>
-<ul class="sub">
+<ul class="sub pad">
 	{% for post in site.categories.thought %}
 	<li>
 		{% if post.external_link %}
