--- a/_posts/2011-10-18-whats-cta-to-you.html
+++ b/_posts/2011-10-18-whats-cta-to-you.html
@@ -6,18 +6,16 @@ categories: [thought]
 
 <p>A Call-to-Action (CTA); a marketers silver bullet. You know what I&rsquo;m referring to: that big, shiny red button that screams &ldquo;Do Whatever I Say, because you know subconsciously you really want to, yet don&rsquo;t know it quite yet.&rdquo; Yeah, that one.</p>
 <p>In case you&rsquo;re a tad befuddled as to what I&rsquo;m referring to; here are some examples in the wild of the interwebs:</p>
-<img src="/images/calls-to-action.png" class="move-over less" alt="Some nice CTA examples -- Mailchimp, Squarspace, and Zerply" />
+<img src="http://jefff.co/images/calls-to-action.png" class="move-over less" alt="Some nice CTA examples -- Mailchimp, Squarspace, and Zerply" />
 <figcaption>Some nice CTA examples from Mailchimp, Squarespace, and Zerply</figcaption>
 <p><strong>Nice, sleek, effective (as far as I can tell), clean; <em>beautiful</em></strong>. However, I see a big issue with this. For sites that&rsquo;s main purpose is to drive revenue through selling something (eCommerce, web subscriptions, web apps, etc.) and for sites that require you download something from them (i.e. open source technology); then this sort of thing is perfectly suited to helping these businesses keep doing what they&rsquo;re doing. But what about informational sites? What is their main goal and how do they achieve it?</p>
 <h2>Take WebMD.com For Exmaple</h2>
 <p>I have no doubt in my mind that this site is not wanting for traffic, and for ad revenue. However, when you visit the site there is no one clear CTA that I can find. I can find lots of CTAs, but they are all competing for attention. Of course this is the nature of informational sites, as they purport to give lots of information on varying topics, but can&rsquo;t we devise a better way to incorporate effective, hierarchical CTAs into these types of sites? Perhaps WebMD doesn&rsquo;t really need any &ldquo;help&rdquo;, but what about the little guys out there? I work with a lot of small businesses and associations, and these are exactly who I&rsquo;m referring to.</p>
-</article>
-<article class="full">
 <h2>Put Yourself In Their Users Shoes</h2>
 <p>Sure, most sites <em>[hopefully]</em> have at least a contact page or form for any users who might want to reach out to the site owners. But, what about the average Joe who stumbles on a site, and finds it extremely useful for their purposes at that time. I can&rsquo;t imagine many of these folk&mdash;myself included&mdash;ever think to themselves, &ldquo;Wow, great site, how do I contact someone?&rdquo; Not very often, if ever at all. Yet this seems to be the most effective type of CTA we can come up with, right? Unfortunately it seems that way. Sure there are email sign-up forms, and social sharing plugins, but isn&rsquo;t there a better solution for this?</p>
 <h2>The Second Coming of the Bookmark?</h2>
 <p>It seems so passe and sorta clunky, but I wonder how effective pumping a Bookmark-as-CTA might actually be for these types of websites.</p>
-<img src="/images/bookmark-cta.png" class="" alt="A Possible Wording for Bookmark CTA" />
+<img src="http://jefff.co/images/bookmark-cta.png" class="" alt="A Possible Wording for Bookmark CTA" />
 <figcaption>A Possible Wording for Bookmark CTA</figcaption>
 <p>Okay, okay&mdash;this is more of a bookmarklet rather than just a standard call to bookmark the page, but only because it might make it easier for the user to do so. My thoughts on this type of CTA being more useful than just a email / social one is adding this into your browser bookmarks means it will be there when you (the user) want it; i.e. not when the site owner wants you to know about it; i.e. via email marketing or social media marketing.</p>
 <p><strong>It&rsquo;s not ideal from a marketers stand point</strong>, as it&rsquo;s really leaving the continual touchpoints up to the user, but it just makes more sense to offer a more relevant CTA to a wider swarth of users than just the generic contact CTA.</p>
