--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 <figure class="featured">
 	<a href="/work/dailytidbit/">
 		<!--<h1><span>Dailytidbit</span></h1>
-		<img src="/images/dailytidbit.jpeg" />-->
+		<img src="http://jefff.co//dailytidbit.jpeg" />-->
 	</a>
 </figure>
 <div class="sub">
