--- a/about/index.html
+++ b/about/index.html
@@ -2,15 +2,15 @@
 layout: default
 title: About
 ---
-<header>
+<header class="about">
 	<h1>About Jefff</h1>
 </header>
 <div class="details c">
 	<!--<img src="http://distillery.s3.amazonaws.com/media/2011/04/09/6c114b02092345d699d71a9ad344e99f_7.jpg" alt="That's me" class="middle" />-->
 	<h2>User of the web:</h2>
-	<p>HTML / CSS / JavaScript / Markdown / Jekyll / Git, Photoshop, <a href="http://twitter.com/jefffis/" target="_blank">Twitter</a>, <a href="http://zerply.com/jefffis" target="_blank">Zerply</a>, <a href="http://open.spotify.com/user/jefffis" target="_blank">Spotify</a>, <a href="http://instagram.com/jefffff" target="_blank">Instagram</a>, and <a href="http://www.quora.com/Jeff-Doan" target="_blank">Quora</a>.</p>
+	<p>HTML / CSS / JavaScript / Markdown / Jekyll / Git, Photoshop, <a href="http://twitter.com/jefffis/">Twitter</a>, <a href="https://github.com/jefffis">GitHub</a>, <a href="http://zerply.com/jefffis">Zerply</a>, <a href="http://open.spotify.com/user/jefffis">Spotify</a>, <a href="http://instagram.com/jefffff">Instagram</a>, and <a href="http://www.quora.com/Jeff-Doan">Quora</a>.</p>
 	<h2>Lover of many things:</h2>
-	<p><a href="http://kizaan.com/" target="_blank">my <em>lovely</em> wife</a>, indie music, <a href="http://instagram.heroku.com/users/jefffff#p42025279" target="_blank">our <em>awesome</em> dog</a>, beer, coffee, hockey, art. <strong>Anything Discworld- or Tolkien-themed basically</strong>.</p>
+	<p><a href="http://kizaan.com/">my <em>lovely</em> wife</a>, indie music, <a href="http://instagram.heroku.com/users/jefffff#p42025279">our <em>awesome</em> dog</a>, beer, coffee, hockey, art. <strong>Anything Discworld- or Tolkien-themed basically</strong>.</p>
 	<h2>Hater of few things:</h2>
 	<p>facebook, the game.</p>
 	<h2>During the day:</h2>
@@ -18,5 +18,5 @@ title: About
 	<h2>During the night:</h2>
 	<p>I&rsquo;m usually doing something: sleeping, eating, rocking, running or similar.</p>
 	<h2>You should:</h2>
-	<p><a href="http://twitter.com/jefffis" target="_blank">Follow me on Twitter</a>, <a href="http://www.quora.com/Jeff-Doan" target="_blank">check me on Quora</a>, <a href="http://zerply.com/jefffis" target="_blank">dig my resume on Zerply</a>. <strong>Or, wanna <a href="mailto:iam@jefff.co">drop me a line</a>?</strong></p>
+	<p><a href="http://twitter.com/jefffis">Follow me on Twitter</a>, <a href="http://www.quora.com/Jeff-Doan">check me on Quora</a>, <a href="http://zerply.com/jefffis">dig my resume on Zerply</a>. <strong>Or, wanna <a href="mailto:iam@jefff.co">drop me a line</a>?</strong></p>
 </div>
