--- a/_posts/2012-05-30-google-web-intents.html
+++ b/_posts/2012-05-30-google-web-intents.html
@@ -3,7 +3,11 @@ layout: works_entry
 title: Google Web Intents
 categories: [work]
 ---
-
+<div class="details">
+	<h2 data-icon="⚒">wireframing + design + CSS3 / jQuery</h2>
+	<p><strong>Note: these were only built as demos</strong> — we worked with a Google Dev to show these off during the 2012 Google i/o conference. They only were made to work in Chrome Canary or Chrome Developer, so they may crash your browser when trying to use the Web Intents.</p>
+	<a href="http://quicksnapr.com" class="button" data-icon="✈">View project</a>
+</div>
 <figure>
 	<img src="http://jefff.co/images/large/mememator.jpg" />
 </figure>
@@ -16,10 +20,3 @@ categories: [work]
 <figure>
 	<img src="http://jefff.co/images/large/imagemator.jpg" />
 </figure>
-<div class="details">
-<h2 data-icon="⚒">wireframing + design + CSS3 / jQuery</h2>
-
-<p><strong>Note: these were only built as demos</strong> — we worked with a Google Dev to show these off during the 2012 Google i/o conference. They only were made to work in Chrome Canary or Chrome Developer, so they may crash your browser when trying to use the Web Intents. Click an image to view the web app.</p>
-
-<a href="http://quicksnapr.com" class="button" data-icon="✈">View project</a>
-</div>
