--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@ layout: default
 		{% for post in site.categories.thought limit:5 %}
 		<li>
 			{% if post.external_link %}
-			<a href="{{ post.external_link }}" class="alt" data-icon="⇗">{{ post.title }}</a>
+			<a href="{{ post.external_link }}" class="alt" data-icon="⇗">{{ post.title }} <span>{{post.date | date: "%b %Y"}}</span></a>
 			{% else %}
-			<a href="{{ post.url }}" data-icon="⚡">{{ post.title }}</a>
+			<a href="{{ post.url }}" data-icon="⚡">{{ post.title }} <span>{{post.date | date: "%b %Y"}}</span></a>
 			{% endif %}
 		</li>
 		{% endfor %}
