--- a/_posts/2013-01-18-google-web-intents.html
+++ b/_posts/2013-01-18-google-web-intents.html
@@ -6,6 +6,15 @@ categories: [work]
 <div class="details">
 	<h2 data-icon="⚒">wireframing + design + CSS3 / jQuery</h2>
 	<p><strong>Note: these were only built as demos</strong> — we worked with a Google Dev to show these off during the 2012 Google i/o conference. They only were made to work in Chrome Canary or Chrome Developer, so they may crash your browser when trying to use the Web Intents.</p>
+
+	<h3>What I Did</h3>
+	<ul>
+		<li>worked with a Google developer to re-design four apps he built for Google i/o conference</li>
+		<li>four unique looks that focused solely on what he wanted users to do</li>
+		<li>used simple design elements to help drive users to interact with apps</li>
+		<li>used K.I.S.S. principle thru and thru</li>
+	</ul>
+
 	<a href="http://quicksnapr.com" class="button" data-icon="✈">View project</a>
 </div>
 <figure>
