--- a/about/index.html
+++ b/about/index.html
@@ -7,6 +7,14 @@ title: About
 </header>
 <div class="details c">
 	<!--<img src="http://distillery.s3.amazonaws.com/media/2011/04/09/6c114b02092345d699d71a9ad344e99f_7.jpg" alt="That's me" class="middle" />-->
+	<h2>A tid bit about me:</h2>
+	<ul class="non">
+		<li>❤&rsquo;er of the web</li>
+		<li>❤ helping guide clients &amp; customers through identifying issues &amp; finding solutions</li>
+		<li>❤ wireframing / IA&rsquo;ing / designing and building websites / apps that help people</li>
+		<li>❤ sexy designs, but even more so, I ❤ snappy sites / apps</li>
+		<li><strong><em>&amp;</em></strong> most of all, I ❤ simple, sleek designs that work for clients and users</li>
+	</ul>
 	<h2>User of the web:</h2>
 	<p>HTML / CSS / JavaScript / Markdown / Jekyll / Git, Photoshop, <a href="http://twitter.com/jefffis/">Twitter</a>, <a href="https://github.com/jefffis">GitHub</a>, <a href="http://zerply.com/jefffis">Zerply</a>, <a href="http://open.spotify.com/user/jefffis">Spotify</a>, <a href="http://instagram.com/jefffff">Instagram</a>, and <a href="http://www.quora.com/Jeff-Doan">Quora</a>.</p>
 	<h2>Lover of many things:</h2>
