--- a/_posts/2013-01-19-google-chromebook.html
+++ b/_posts/2013-01-19-google-chromebook.html
@@ -6,6 +6,14 @@ categories: [work]
 <div class="details">
 	<h2 data-icon="⚒">front-end build</h2>
 	<p>We worked with Google to build and skin their interface for their new line of Chromebooks. Fortunately we only had to worry about the latest build of Chrome.</p>
+
+	<h3>What I Did</h3>
+	<ul>
+		<li>took <strong>flat designs and added subtle details to improve</strong> the UX (aka to delight users)</li>
+		<li>back &amp; forth with designer to agree on / create <strong>workable solutions to their need for long-winded forms</strong></li>
+		<li>added in JS/CSS enhancements to fade in/out page loads for <strong>more app-like feel</strong></li>
+	</ul>
+
 	<a href="http://jefff.co/misc/googles" class="button" data-icon="✈">View project</a>
 </div>
 <figure>
