Updates to work and thoughts pages

--- a/_posts/2011-05-11-brand-those-emails.html
+++ b/_posts/2011-05-11-brand-those-emails.html
@@ -2,6 +2,7 @@
 layout: thoughts_entry
 title: Brand Those Emails
 categories: [thought]
+tagged: email
 ---
 
 <p>Email outreach to prospects / users can be a very successful mode of communication. <strong>It can also be a big #fail if not done properly</strong>.</p>
