--- a/_posts/2011-06-11-the-text-too.html
+++ b/_posts/2011-06-11-the-text-too.html
@@ -2,6 +2,7 @@
 layout: thoughts_entry
 title: The Text, Too
 categories: [thought]
+tagged: email
 ---
 
 <p>For those of us who work on email marketing campaigns at any level, we know that not everyone can/wants to receive the full HTML version of a particular campaign. Some simply cannot receive this, and others simply prefer not to receive this. For these folks, we need to consider the text-only versions of our email campaigns.</p>
