--- a/_posts/2011-07-07-transitions-for-the-soul.html
+++ b/_posts/2011-07-07-transitions-for-the-soul.html
@@ -2,6 +2,7 @@
 layout: thoughts_entry
 title: Transitions For The Soul
 categories: [thought]
+tagged: life
 ---
 
 <p>The times they are a-changin&rsquo;. In many more ways than one, but that&rsquo;s definitely the understatement of the year. Web technologies change seemingly every few minutes, users expectations of said technologies change as well, some faster than others though. It&rsquo;s a different world when we go to bed than it was when we awoke.</p>
