--- a/_posts/2011-10-18-whats-cta-to-you.html
+++ b/_posts/2011-10-18-whats-cta-to-you.html
@@ -2,6 +2,7 @@
 layout: thoughts_entry
 title: What's CTA To You
 categories: [thought]
+tagged: marketing
 ---
 
 <p>A Call-to-Action (CTA); a marketers silver bullet. You know what I&rsquo;m referring to: that big, shiny red button that screams &ldquo;Do Whatever I Say, because you know subconsciously you really want to, yet don&rsquo;t know it quite yet.&rdquo; Yeah, that one.</p>
