--- a/_posts/2012-01-24-mobile-first-do-it-do-it-now.html
+++ b/_posts/2012-01-24-mobile-first-do-it-do-it-now.html
@@ -2,6 +2,7 @@
 layout: thoughts_entry
 title: Mobile First? Do it. Do it now.
 categories: [thought]
+tagged: design
 ---
 
 <p><strong>What&rsquo;s All the Hubbub About Mobile First Mobileness??</strong> While it is a hot new term, It&rsquo;s not just a hot new term. It&rsquo;s much, much more than that. It&rsquo;s a whole new way of thinking about users, content, web design, and the lot. Do a <a href="https://www.google.com/search?q=mobile+first">Google search for &rsquo;mobile first&rsquo;</a> and you&rsquo;ll find somewhere in the neighborhood of 4,520,000,000 results. That&rsquo;s a lot of results.</p>
