--- a/_posts/2012-03-22-southby-from-a-noobs-eye.html
+++ b/_posts/2012-03-22-southby-from-a-noobs-eye.html
@@ -2,6 +2,7 @@
 layout: thoughts_entry
 title: Southby from a Noobs Eye
 categories: [thought]
+tagged: life
 ---
 
 <p><strong>This past SXSW was my first time attending (many props to <a href="http://twitter.com/browsermedia">@browsermedia</a> &amp; <a href="http://twitter.com/kerrygunther">@kerrygunther</a>); and I was super stoked to be able to go</strong> -- a vacation, a chance to learn new kick ass webness, awesome food, awesome music, and awesome people. For the most part, that&#39;s exactly what it was. Austin seems like a great town, filled to the brim with <strong>great taco joints</strong> and <strong>beer dispensaries</strong> (aka bars), so I was glad I finally got to experience that. I met some very cool people, heard some even cooler people speak, and tried to meet up (unsuccessfully) with seemingly the coolest people I follow on twitter. Plus, I heard a bunch of great bands, all for free. <em><strong>Overall, it was awesome, and I wish I&#39;ll be lucky enough to go again at some point.</strong></em> However, I had a few qualms with the conference itself.</p>
