--- a/_posts/2012-07-20-css-generated-content.html
+++ b/_posts/2012-07-20-css-generated-content.html
@@ -2,6 +2,7 @@
 layout: thoughts_entry
 title: CSS Generated Content
 categories: [thought]
+tagged: css
 ---
 
 <p><strong>We&rsquo;re going to look at when to use CSS generated content and when not to.</strong> CSS generated content? Yep, you read that right. It&rsquo;s a real thing. A pretty awesome thing too, honestly. What it enables web designers and developers to do is pretty swanky and [can be] pretty helpful to boot.</p>
