--- a/_posts/2012-08-30-do-google-web-fonts-work-well-in-html-email.html
+++ b/_posts/2012-08-30-do-google-web-fonts-work-well-in-html-email.html
@@ -2,6 +2,7 @@
 layout: thoughts_entry
 title: Do Web Fonts Work In Email?
 categories: [thought]
+tagged: email
 ---
 
 <p>I&#8217;d seen a few tests on (especially on <a href="http://www.campaignmonitor.com/css/">Campaign Monitor</a>) about CSS (mainly interested in CSS3) and support across email programs. Due to the lack of standards, there isn&#8217;t great support outside of the Apple realm. However, I wanted to test to see how well we could use some of the new <a href="http://code.google.com/webfonts">Google Web Fonts</a> (as using Typekit is not really an option yet).</p>
