--- a/about/index.html
+++ b/about/index.html
@@ -7,7 +7,7 @@ title: About
 </header>
 <div class="details c">
 	<!--<img src="http://distillery.s3.amazonaws.com/media/2011/04/09/6c114b02092345d699d71a9ad344e99f_7.jpg" alt="That's me" class="middle" />-->
-	<h2>A tid bit about me:</h2>
+	<h2 class="a">A tid bit about me:</h2>
 	<ul class="non">
 		<li>❤&rsquo;er of the web</li>
 		<li>❤ helping guide clients &amp; customers through identifying issues &amp; finding solutions</li>
