Update resume & CSS, add in txt resume file

--- a/resume/index.html
+++ b/resume/index.html
@@ -25,7 +25,7 @@ title: Résumé
 		<li><strong>Mobile Design &amp; Dev</strong></li>
 		<li>Wireframing (<strong>I ❤ GoMockingbird app</strong>)</li>
 		<li>Photoshop / Illustrator / InDesign</li>
-		<li>HTML Email design, builds &amp; tests using <em>Mailchimp &amp; CampaignMonitor</em></li>
+		<li><strong>HTML email design, build &amp; testing</strong> using Mailchimp, CampaignMonitor &amp; Litmus</li>
 		<li>Basecamp</li>
 		<li><strong>Tomfoolery</li>
 		<li>Being a music snob &amp; hating on Facebook</strong></li>
