Updates to include tmcrnch

--- a/resume/index.html
+++ b/resume/index.html
@@ -43,7 +43,7 @@ title: Résumé
 	<h2>Sr. Interactive Designer</h2>
 	<h3>Thinkdesign <strong>Feb &lsquo;10&ndash;July &lsquo;11</strong></h3>
 	<ul>
-		<li>Developed <strong>usable, optimized websites</strong> for multiple clients&mdash;<strong>wireframing, design, front-end coding, and CMS-integrations</strong></li>
+		<li>Developed <strong>usable, optimized websites</strong> for multiple clients&mdash;<strong>wireframing, design, front-end coding, and CMS integrations</strong></li>
 		<li>Designed and developed <strong>HTML emails</strong> for national / international campaigns&mdash;wireframing, design, coding, and testing</li>
 		<li>Designed banner ads (<strong>animated gif</strong> &amp; flash <strong>[boo]</strong>)</li>
 		<li>Created and implemented client PPC campaigns</li>
@@ -63,7 +63,7 @@ title: Résumé
 		<li>Developed direct mail for national campaigns</li>
 		<li>Designed ROP for national newspaper &amp; magazine publications such as <em>The Washington Post</em>, <em>The San Diego Tribune</em>, <em>The Wall Street Journal</em>, and <em>The Boston Globe</em></li>
 		<li>Worked closely with vendors managing multiple print jobs</li>
-		<li>Managed team with Junior designer</li>
+		<li>Managed team with junior designer</li>
 	</ul>
 	<h2>Jr. Web Designer</h2>
 	<h3>Sit4Less.com <strong>Feb &lsquo;05&ndash;Apr &lsquo;08</strong></h3>
