--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <figure class="featured">
-	<a href="/work/dailytidbit/">
+	<a href="/work/tmcrnch/">
 		<!--<h1><span>Dailytidbit</span></h1>
 		<img src="http://jefff.co//dailytidbit.jpeg" />-->
 	</a>
@@ -12,7 +12,7 @@ layout: default
 		<!--{% for post in site.categories.work limit:1 %}
 		<li><a href="{{ post.url }}" data-icon="⚡">{{ post.title }}</a></li>
 		{% endfor %}-->
-		<li><a href="/work/dailytidbit/" data-icon="⚒">Dailytidbit</a></li>
+		<li><a href="/work/tmcrnch/" data-icon="⚒">Tmcrnch</a></li>
 	</ul>
 	<h2>Recent Thoughts</h2>
 	<ul class="sub">
