Updates for case study for neustar

--- a/case-studies/index.html
+++ b/case-studies/index.html
@@ -6,7 +6,7 @@ title: Case Studies
 	<h1>Case Studies</h1>
 </header>
 <ul class="sub pad">
-{% for post in site.categories.case %}
+{% for post in site.categories.case-study %}
 <li>
 	<a href="{{ post.url }}" data-icon="⚒">{{ post.title }}</a>
 </li>
