add in word doc resume

--- a/resume/index.html
+++ b/resume/index.html
@@ -10,7 +10,7 @@ title: Résumé
 	<span class="intro">
 	<h2>I often dream of penny-farthings.</h2>
 	<p>And I recently got my own <a href="https://twitter.com/therealjefffis" target="_blank">parody twitter account</a> (not run by me). <strong>I&rsquo;m a nerd-poser.</strong> Or at least <a href="http://www.youtube.com/watch?v=nR6CY3pFjYM" target="_blank">according to Portlandia, I am</a>. And I&rsquo;d agree with that. I&rsquo;m super into Tolkien and Discworld, just as much as I&rsquo;m into semi-pixel perfection*, just as much as I&rsquo;m into page speed and web performance. I&rsquo;m passionate about design first, but I also love making things come to life, and building things that help ppl simplify their lifes. Lastly, <strong>I&rsquo;m going to be a dad soon, and I can&rsquo;t wait to get my daughter <a href="http://diy.org" target="_blank">rocking on DIY</a></strong>.</p>
-	<p>Here&rsquo;s a snapshot of my web-life and how I got here. Any questions? <a href="mailto:iam@jefff.co">Hit me up as you please</a>. Feel free to <a href="javascript:window.print()">print me as a PDF</a>, or <a href="/resume/jeff-doan-resume.txt">download as a TXT file</a>.</p>
+	<p>Here&rsquo;s a snapshot of my web-life and how I got here. Any questions? <a href="mailto:iam@jefff.co">Hit me up as you please</a>. Feel free to <a href="javascript:window.print()">print me as a PDF</a>, <a href="/resume/jeff-doan-resume.txt">download as a TXT file</a>, <a href="/resume/jeff-doan-resume.docx">a Word version</a>, or <a href="/resume/jeff-doan-resume.pdf">a PDF version</a>.</p>
 	</span>
 	<h2>Peruse some of my skills:</h2>
 	<ul>
