--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 ---
 layout: default
 ---
-<figure class="featured giveabit">
-	<a href="/work/giveabit/">
+<span class="yesno">
+<figure class="featured yesno">
+	<a href="/work/yesno/">
 		<!--<h1><span>Dailytidbit</span></h1>
 		<img src="http://jefff.co//dailytidbit.jpeg" />-->
 	</a>
 </figure>
+</span>
 <div class="sub">
 	<ul class="sub minus">
 		<!--{% for post in site.categories.work limit:1 %}
 		<li><a href="{{ post.url }}" data-icon="⚡">{{ post.title }}</a></li>
 		{% endfor %}-->
-		<li><a href="/work/giveabit/" data-icon="⚒">Giveab.it</a></li>
+		<li><a href="/work/yesno/" data-icon="⚒">yesno</a></li>
 	</ul>
 	<h2>Recent Thoughts</h2>
 	<ul class="sub">
